modules/gdscript/tests/scripts/parser/errors/wrong_value_after_dollar_slash.gd
extends Node


func test():
	$MyNode/23 # Can't use number here.
